@startuml MUHNAC-CollectionUse-Implemented

skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

' ============================================================
' Implemented domain model + proposed prototype assistance context
' Source: app/use_of_collections/domain/models.py and enums.py
' Note: this file keeps its historical name. Core collection-use packages mirror
' the implemented model; AI Staff Assistance is marked as proposed/prototype.
' ============================================================

' ============================================================
' Shared Kernel
' ============================================================

package "Shared Kernel" <<Shared Kernel>> {

        class ReferenceNumber <<Value Object>> #e0afea {
        - value: String
        }

        class EmailAddress <<Value Object>> #e0afea {
        - value: String
        }

        class DocumentType <<Value Object>> #e0afea {
        - value: String
        }

        class ObjectReference <<Value Object>> #e0afea {
        - inventoryNumber: String
        - displayTitle: String?
        - objectName: String?
        - briefDescriptionSnapshot: String?
        }

        class MessageAttachment <<Value Object>> #e0afea {
        - documentId: DocumentId
        - fileName: String
        }
}


' ============================================================
' Identity & Access
' ============================================================

package "Identity & Access" <<Bounded Context>> {

        class User <<Aggregate Root>> #87bdd8 {
        - id: UserId
        - name: String
        - email: String
        - passwordHash: String
        }

        class Group <<Aggregate Root>> #87bdd8 {
        - id: GroupId
        - name: GroupName
        }

        class Permission <<Aggregate Root>> #87bdd8 {
        - id: PermissionId
        - userId: UserId
        - groupId: GroupId
        - user: User?
        - group: Group?
        }

        enum GroupName #87bdd8 {
        EXTERNAL
        CURATORIAL
        COLLECTIONS_MANAGEMENT
        DIRECTION
        SYS_ADMIN
        }

        Permission ..> User : userId
        Permission ..> Group : groupId
}


' ============================================================
' User Request
' ============================================================

package "User Request" <<Bounded Context>> {

        class Proposal <<Aggregate Root>> #ffeead {
        - id: ProposalId
        - referenceNumber: ReferenceNumber
        - title: String
        - collectionUseProjectId: CollectionUseProjectId
        - intendedUse: IntendedUse
        - beginDate: LocalDate
        - endDate: LocalDate
        - status: ProposalStatus
        - requestedBy: PermissionId
        - submittedAt: DateTime
        - assignedTo: PermissionId?
        - watchers: List<PermissionId>
        - events: List<ProposalEvent>
        - requestedDocuments: List<RequestedDocument>
        - requestedObjects: List<RequestedObject>
        - documents: List<Document>
        + recordSubmitted(...)
        + assign(...)
        + requestDocuments(...)
        + addRequestedObjects(...)
        + submitDocuments(...)
        + forward(...)
        + referToDirection(...)
        + directionClarify(...)
        + approve(...)
        + reject(...)
        }

        class IntendedUse <<Value Object>> #ffeead {
        - useType: UseType
        - description: String
        }

        enum UseType #ffeead {
        EXHIBITION
        IN_SITU_VISIT
        OTHER
        }

        enum ProposalStatus #ffeead {
        SUBMITTED
        PENDING
        APPROVED
        REJECTED
        CANCELLED
        }

        class ProposalEvent <<Value Object>> #ffeead {
        - occurredAt: DateTime
        - type: ProposalEventType
        - triggeredBy: PermissionId
        - note: String?
        }

        enum ProposalEventType #ffeead {
        SUBMITTED
        ASSIGNED
        FORWARDED
        DOCUMENTS_REQUESTED
        DOCUMENTS_SUBMITTED
        REVIEW_STARTED
        REFERRED_TO_DIRECTION
        DIRECTION_CLARIFIED
        APPROVED
        REJECTED
        CANCELLED
        }

        class RequestedDocument <<Entity>> #ffeead {
        - id: RequestedDocumentId
        - type: DocumentType
        - description: String
        - requestedAt: DateTime
        - requestedBy: PermissionId
        }

        class RequestedObject <<Entity>> #ffeead {
        - id: RequestedObjectId
        - objectReference: ObjectReference
        - category: String
        - description: String
        - requestedAt: DateTime
        - requestedBy: PermissionId
        }

        class Document <<Entity>> #c7ceea {
        - id: DocumentId
        - type: DocumentType
        - fileName: String
        - fileReference: String
        - submittedAt: DateTime
        - submittedBy: PermissionId
        }

        class Conversation <<Aggregate Root>> #96ceb4 {
        - id: ConversationId
        - proposalId: ProposalId
        - messages: List<Message>
        - externalMessageId: String?
        + start(...)
        + addMessage(...)
        }

        class Message <<Entity>> #96ceb4 {
        - id: MessageId
        - sentAt: DateTime
        - sender: EmailAddress
        - recipient: EmailAddress
        - subject: String
        - body: String
        - attachments: List<MessageAttachment>
        }

        Proposal *-- "1..1" IntendedUse
        Proposal *-- "0..*" ProposalEvent
        Proposal *-- "0..*" RequestedDocument
        Proposal *-- "0..*" RequestedObject
        Proposal *-- "0..*" Document
        IntendedUse ..> UseType : useType

        RequestedDocument *-- DocumentType
        RequestedObject *-- ObjectReference
        Document *-- DocumentType

        Proposal ..> Permission : requestedBy
        Proposal ..> Permission : assignedTo
        Proposal ..> Permission : watcher ids
        Proposal ..> CollectionUseProject : collectionUseProjectId
        ProposalEvent ..> Permission : triggeredBy
        RequestedDocument ..> Permission : requestedBy
        RequestedObject ..> Permission : requestedBy
        Document ..> Permission : submittedBy

        Conversation *-- "1..*" Message
        Conversation ..> Proposal : proposalId
        Message *-- "0..*" MessageAttachment
        Message ..> EmailAddress : sender
        Message ..> EmailAddress : recipient
        MessageAttachment ..> Document : documentId
}


' ============================================================
' Collection Use
' ============================================================

package "Collection Use" <<Bounded Context>> {

        class CollectionUseProject <<Aggregate Root>> #ff6f69 {
        - id: CollectionUseProjectId
        - referenceNumber: ReferenceNumber
        - title: String
        - purpose: String
        - intendedUse: IntendedUse
        - status: UseStatus
        - beginDate: LocalDate
        - endDate: LocalDate
        - requestedBy: PermissionId
        - proposalId: ProposalId?
        - requestNote: String?
        - note: String?
        - result: UseResult?
        - authorisedBy: PermissionId?
        - authorisedAt: DateTime?
        - events: List<UseEvent>
        + recordRequested(...)
        + recordStarted(...)
        + recordCompleted(...)
        + recordCancelled(...)
        }

        enum UseStatus #ff6f69 {
        CREATED
        IN_PROGRESS
        COMPLETED
        CANCELLED
        }

        enum UseResult #ff6f69 {
        COMPLETED
        CANCELLED
        }

        class UseEvent <<Value Object>> #ff6f69 {
        - occurredAt: DateTime
        - type: UseEventType
        - triggeredBy: PermissionId
        - note: String?
        }

        enum UseEventType #ff6f69 {
        REQUESTED
        STARTED
        COMPLETED
        CANCELLED
        }

        class Attachment <<Value Object>> #ffb7b2 {
        - fileReference: String
        - fileName: String
        - mediaType: MediaType
        - uploadedAt: DateTime
        - note: String?
        }

        enum MediaType #ffb7b2 {
        DOCUMENT
        IMAGE
        VIDEO
        OTHER
        }

        class ObjectAccessLog <<Aggregate Root>> #ffb7b2 {
        - id: ObjectAccessLogId
        - referenceNumber : ReferenceNumber
        - collectionUseProjectId: CollectionUseProjectId
        - dateConclusion: DateTime?
        - curator: PermissionId?
        - objects: List<ObjectLogEntry>
        + addObjectLogEntry(...)
        + conclude(...)
        }

        class ObjectLogEntry <<Entity>> #ffb7b2 {
        - id: ObjectLogEntryId
        - objectAccessLogId: ObjectAccessLogId
        - objectReference: ObjectReference
        - numberOfObjects: Int
        - addedAt: DateTime
        - addedBy: PermissionId
        - observations: String?
        - requestedObjectId: RequestedObjectId?
        - attachments: List<Attachment>
        + addAttachment(...)
        + edit(...)
        }


        class ObjectOccurrenceLog <<Aggregate Root>> #ffb7b2 {
        - id: ObjectOccurrenceLogId
        - referenceNumber : ReferenceNumber
        - collectionUseProjectId: CollectionUseProjectId
        - dateConclusion: DateTime?
        - curator: PermissionId?
        - objects: List<ObjectOccurrenceEntry>
        + addObjectOccurrenceEntry(...)
        + conclude(...)
        }


        class ObjectOccurrenceEntry <<Entity>> #ffb7b2 {
        - id: ObjectOccurrenceEntryId
        - objectOccurrenceLogId: ObjectOccurrenceLogId
        - objectReference: ObjectReference
        - numberOfObjects: Int
        - occurrenceDate: DateTime
        - location: String
        - reportedBy: PermissionId
        - detailedDescription: String
        - testimonial: String?
        - requestedObjectId: RequestedObjectId?
        - attachments: List<Attachment>
        + addAttachment(...)
        + edit(...)
        }



        CollectionUseProject *-- ReferenceNumber
        CollectionUseProject *-- "1..1" IntendedUse
        CollectionUseProject *-- "0..*" UseEvent
        CollectionUseProject ..> Proposal : proposalId
        CollectionUseProject ..> Permission : requestedBy
        CollectionUseProject ..> Permission : authorisedBy
        UseEvent ..> Permission : triggeredBy


        ObjectAccessLog "1..1" -- CollectionUseProject : collectionUseProjectId
        ObjectAccessLog *-- "0..*" ObjectLogEntry
        ObjectAccessLog *-- ReferenceNumber
        ObjectAccessLog ..> Permission : curator

        ObjectLogEntry *-- "0..*" Attachment
        ObjectLogEntry *-- "1..1" ObjectReference
        ObjectLogEntry ..> Permission : addedBy
        ObjectLogEntry ..> RequestedObject : requestedObjectId

        ObjectOccurrenceLog "1..1" -- CollectionUseProject : collectionUseProjectId
        ObjectOccurrenceLog *-- "0..*" ObjectOccurrenceEntry
        ObjectOccurrenceLog *-- ReferenceNumber
        ObjectOccurrenceLog ..> Permission : curator

        ObjectOccurrenceEntry *-- "0..*" Attachment
        ObjectOccurrenceEntry *-- "1..1" ObjectReference
        ObjectOccurrenceEntry ..> Permission : reportedBy
        ObjectOccurrenceEntry ..> RequestedObject : requestedObjectId
}

' ============================================================
' AI Staff Assistance
' ============================================================
' Proposed/prototype supporting context. It reads User Request data for staff
' decision support, but generated assistance does not mutate official Proposal,
' Conversation, Message, Document, or CollectionUseProject state.

  package "AI Staff Assistance" <<Bounded Context, Proposed Prototype>> {

    class AssistanceSession <<Aggregate Root>> #d5e8d4 {
      - id: AssistanceSessionId
      - agent: StaffAgentType
      - title: String
      - createdBy: PermissionId
      - target: AssistanceTarget
      - status: AssistanceSessionStatus
      - selectedMessage: Message?
      - proposalSnapshot: Proposal
      - accessibleDocuments: List<Document>
      - turns: List<AssistanceTurn>
      - proposalAgentRuns: List<ProposalAgentRun>
      - createdAt: DateTime
      - archivedAt: DateTime?
      + start(...)
      + addTurn(...)
      + searchObjects(...)
    }

    enum StaffAgentType #d5e8d4 {
      PROPOSAL_AGENT
    }

    class AssistanceTarget <<Value Object>> #d5e8d4 {
      - type: AssistanceTargetType
      - proposalId: ProposalId
      - conversationId: ConversationId?
      - messageId: MessageId?
    }

    enum AssistanceTargetType #d5e8d4 {
      PROPOSAL_MESSAGE
      PROPOSAL
    }

    enum AssistanceSessionStatus #d5e8d4 {
      ACTIVE
      ARCHIVED
    }

    class AssistanceTurn <<Entity>> #d5e8d4 {
      - id: AssistanceTurnId
      - role: AssistanceTurnRole
      - content: String
      - result: AssistanceTurnResult?
      - createdAt: DateTime
    }

    enum AssistanceTurnRole #d5e8d4 {
      STAFF
      AGENT
      SYSTEM
    }

    ' A capability result revealed on-demand with the AGENT turn that answers a
    ' staff question (conclusions stay hidden until asked).
    class AssistanceTurnResult <<Value Object>> #d5e8d4 {
      - kind: AssistanceTurnResultKind
      - triage: EmailTriageResult?
      - documentSearch: DocumentSearchResult?
      - objectSearch: ObjectSearchResult?
    }

    enum AssistanceTurnResultKind #d5e8d4 {
      TRIAGE
      DOCUMENT_SEARCH
      OBJECT_SEARCH
    }

    class ProposalAgentRun <<Entity>> #dae8fc {
      - id: ProposalAgentRunId
      - status: AgentRunStatus
      - capabilities: List<ProposalAgentCapability>
      - triage: EmailTriageResult?
      - documentSearch: DocumentSearchResult?
      - objectSearch: ObjectSearchResult?
      - createdAt: DateTime
      - completedAt: DateTime?
    }

    enum AgentRunStatus #dae8fc {
      RUNNING
      NEEDS_STAFF_INPUT
      COMPLETED
      FAILED
    }

    enum ProposalAgentCapability #dae8fc {
      EMAIL_TRIAGE
      DOCUMENT_SEARCH
      OBJECT_SEARCH
    }

    class EmailTriageResult <<Value Object>> #dae8fc {
      - probableUseType: UseType
      - confidence: ConfidenceLevel
      - rationale: String
      - evidence: List<String>
    }

    enum ConfidenceLevel #dae8fc {
      LOW
      MEDIUM
      HIGH
    }

    class DocumentSearchResult <<Value Object>> #dae8fc {
      - query: String
      - basedOnUseType: UseType
      - matches: List<DocumentSearchMatch>
      - summary: String
    }

    class DocumentSearchMatch <<Value Object>> #dae8fc {
      - documentId: DocumentId
      - fileName: String
      - type: String
      - source: DocumentSearchSource
      - reason: String
    }

    enum DocumentSearchSource #dae8fc {
      PROPOSAL_ATTACHMENT
      ASSISTANCE_CATALOG
    }

    class ObjectSearchResult <<Value Object>> #dae8fc {
      - status: ObjectSearchStatus
      - query: String?
      - matches: List<ObjectReference>
      - missingInformation: List<String>
      - summary: String
    }

    enum ObjectSearchStatus #dae8fc {
      NEEDS_MORE_INFORMATION
      SEARCHED
      NO_MATCHES
    }

    AssistanceSession *-- "1..1" AssistanceTarget
    AssistanceSession *-- "0..*" AssistanceTurn
    AssistanceSession *-- "0..*" ProposalAgentRun
    AssistanceTurn *-- "0..1" AssistanceTurnResult
    AssistanceTurnResult ..> EmailTriageResult
    AssistanceTurnResult ..> DocumentSearchResult
    AssistanceTurnResult ..> ObjectSearchResult
    AssistanceSession ..> Permission : createdBy
    AssistanceSession ..> Message : selectedMessage
    AssistanceSession ..> Proposal : proposalSnapshot
    AssistanceSession ..> Document : accessibleDocuments

    ProposalAgentRun *-- "0..1" EmailTriageResult
    ProposalAgentRun *-- "0..1" DocumentSearchResult
    ProposalAgentRun *-- "0..1" ObjectSearchResult

    AssistanceTarget ..> Proposal : proposalId
    AssistanceTarget ..> Conversation : conversationId
    AssistanceTarget ..> Message : messageId
    EmailTriageResult ..> UseType : probableUseType
    DocumentSearchResult *-- "0..*" DocumentSearchMatch
    DocumentSearchMatch ..> Document : documentId
    ObjectSearchResult ..> ObjectReference : matches
  }


@enduml
